<resources>
    <string name="app_name">GALLERY</string>

    <string name="gallery">Gallery</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="hidden">Hidden</string>
    <string name="locked">Locked</string>
    <string name="settings">Settings</string>
    <string name="favourites">Favourites</string>

    <string name="choose_album">Choose albums</string>
    <string name="ok">OK</string>
    <string name="image_delete">Delete image</string>
    <string name="image_information">Image Information</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">saving images</string>
    <string name="preparing_card">preparing card</string>
    <string name="no_storage_card">No SD Card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="name">Name</string>
    <string name="created_date">Created Date</string>
    <string name="modified_date">Modified Date</string>
    <string name="size">Size</string>
    <string name="picture_search_hint">Enter picture name or date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_picture">Search Picture</string>
    <string name="switch_view">Switch view</string>
    <string name="up_icon">▲</string>
    <string name="down_icon">▼</string>
    <string name="sort_type">Sort Type</string>
    <string name="filters">Filters</string>
    <string name="edit">Edit</string>
    <string name="hide">Hide</string>
    <string name="lock">Lock</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="folders">Folders</string>
    <string name="create_new_album">Create new Album</string>
    <string name="add_to_album">Add to Album</string>

    <string name="path">Path</string>
    <string name="type">Type</string>
    <string name="uri">URI</string>
    <string name="Yes">Yes</string>
    <string name="close">Close</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="input_password">Enter Your Password</string>


</resources>