<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.galleryapp.ui.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_folder"
        android:name="com.example.galleryapp.ui.folder.FolderFragment"
        android:label="@string/folders"
        tools:layout="@layout/fragment_folder" />

    <fragment
        android:id="@+id/nav_album"
        android:name="com.example.galleryapp.ui.album.AlbumFragment"
        android:label="@string/album"
        tools:layout="@layout/fragment_album" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.galleryapp.ui.camera.CameraFragment"
        android:label="@string/camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.galleryapp.ui.favorites.FavoritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_hidden"
        android:name="com.example.galleryapp.ui.hidden.HiddenFragment"
        android:label="@string/hidden"
        tools:layout="@layout/fragment_hidden" />
    <fragment
            android:id="@+id/nav_locked"
            android:name="com.example.galleryapp.ui.locked.LockedFragment"
            android:label="@string/locked"
            tools:layout="@layout/fragment_locked" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.galleryapp.ui.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />

</navigation>